fixing the missing description expansion
Seems like the invisible class was being applied to the description
body instead of having hidden be toggled on that class.  Also returning
true for the click event so the toggle button toggles.

--- a/chrome/content/css/history.css
+++ b/chrome/content/css/history.css
@@ -171,6 +171,9 @@ img.favicon {
   max-height: 90px;
   max-width: 125px;
 }
+.max-height-image {
+  max-height: 100% !important;
+}
 
 .bookmarked {
   display: inline-block;
